--- a/package.json
+++ b/package.json
@@ -14,17 +14,25 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.1"
