--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@react-google-maps/api": "^2.19.2",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
@@ -23,14 +24,13 @@
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-google-charts": "^4.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
